@@ -1,6 +1,7 @@
 package de.uftos.e2e;
 
 import static de.uftos.utils.JsonGenerator.generatePageJson;
+import static de.uftos.utils.JsonGenerator.generateStudentGroupJson;
 import static de.uftos.utils.JsonGenerator.generateStudentJson;
 import static de.uftos.utils.JsonGenerator.generateTagJson;
 import static io.restassured.RestAssured.given;
@@ -22,11 +23,13 @@ class StudentsTest {
   private static final String FIRST_STUDENT_LAST_NAME = "Mustermann";
   private static final String SECOND_STUDENT_FIRST_NAME = "Jason";
   private static final String SECOND_STUDENT_LAST_NAME = "Mustermann";
+  private static final String GROUP_NAME = "Ethics";
   private static final String TAG_NAME = "Visual Impairment";
 
   static String firstStudent;
   static String secondStudent;
   static String tagId;
+  static String groupId;
 
   @BeforeAll
   static void createTestStudents() throws JSONException {
@@ -43,11 +46,12 @@ class StudentsTest {
         .body().jsonPath().getString("id");
 
     firstStudent = given().contentType(ContentType.JSON)
-        .body(generateStudentJson(FIRST_STUDENT_FIRST_NAME, FIRST_STUDENT_LAST_NAME,
-            Collections.emptyList()))
+        .body(generateStudentJson(FIRST_STUDENT_FIRST_NAME, FIRST_STUDENT_LAST_NAME, List.of(),
+            List.of()))
         .when()
         .post("/students")
         .then()
+        .log().ifValidationFails(LogDetail.ALL)
         .statusCode(200)
         .body("id", notNullValue())
         .body("firstName", equalTo(FIRST_STUDENT_FIRST_NAME))
@@ -57,7 +61,7 @@ class StudentsTest {
         .body().jsonPath().getString("id");
 
     secondStudent = given().contentType(ContentType.JSON)
-        .body(generateStudentJson(SECOND_STUDENT_FIRST_NAME, SECOND_STUDENT_LAST_NAME,
+        .body(generateStudentJson(SECOND_STUDENT_FIRST_NAME, SECOND_STUDENT_LAST_NAME, List.of(),
             List.of(tagId)))
         .when()
         .post("/students")
@@ -69,10 +73,29 @@ class StudentsTest {
         .log().ifValidationFails()
         .extract()
         .body().jsonPath().getString("id");
+
+    groupId = given().contentType(ContentType.JSON)
+        .body(generateStudentGroupJson(GROUP_NAME, List.of(secondStudent), List.of(),
+            List.of(), List.of()))
+        .when()
+        .post("/student-groups")
+        .then()
+        .statusCode(200)
+        .body("id", notNullValue())
+        .body("name", equalTo(GROUP_NAME))
+        .log().ifValidationFails()
+        .extract()
+        .body().jsonPath().getString("id");
   }
 
   @AfterAll
   static void deleteCreatedStudents() {
+    given().contentType(ContentType.JSON)
+        .when()
+        .delete("/student-groups/{id}", groupId)
+        .then()
+        .statusCode(200);
+
     given().contentType(ContentType.JSON)
         .when()
         .delete("/students/{id}", firstStudent)
@@ -129,7 +152,22 @@ class StudentsTest {
         .statusCode(200)
         .body("totalElements", equalTo(1))
         .body("content[0].id", equalTo(firstStudent))
-        .log().ifValidationFails(LogDetail.BODY);
+        .log().ifValidationFails();
 
+  }
+
+  @Test
+  void getStudentsWithStudentGroup() throws JSONException {
+    given().contentType(ContentType.JSON)
+        .body(generatePageJson(0, 10, Collections.emptyList()))
+        .param("groups", List.of(groupId))
+        .when()
+        .get("/students")
+        .then()
+        .log().ifValidationFails(LogDetail.ALL)
+        .statusCode(200)
+        .body("totalElements", equalTo(1))
+        .body("content[0].id", equalTo(secondStudent))
+        .log().ifValidationFails();
   }
 }
